2009-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-jaxws-getdtdtype.patch:
	Fix path.

2009-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-jaxws-getdtdtype.patch:
	Add additional fix for AttributeBase.java
	
2009-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Make use of JAXWS dependent on absence of
	javax.annotation.Resource and/or getDTDType()
	bug.  Add new JAXWS patch.
	(extract-jaxws.stamp): Apply getDTDType() patch
	if bug found.
	* acinclude.m4:
	(IT_GETDTDTYPE_CHECK): Check for old versions of
	gcj/Classpath which have
	javax.xml.stream.events.Attribute.getDTDType()
	with a return type of QName not String.
	* configure.ac:
	Invoke new IT_GETDTDTYPE_CHECK macro.
	* patches/icedtea-jaxws-getdtdtype.patch:
	New patch to work around the getDTDType() bug.
	
2010-03-01  Mark Wielaard  <mark@klomp.org>

	* patches/ecj/icedtea.patch: Don't add generated dir to
	bootclasspath in langtools/make/build.xml.

2010-02-26  Mark Wielaard  <mark@klomp.org>

	* patches/openjdk/6928623-verbose-langtools.patch: New patch.
	* Makefile.am (ICEDTEA_PATCHES): Add new patch.

2010-02-26  Pavel Tisnovsky <ptisnovs@redhat.com>

	* removed two unnecessary timezone patches

2010-02-26  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::generate_native_code): Undefine debug code for
	NDEBUG builds

2010-02-24 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add PULSE_JAVA_CLEAN_TARGET
	to handle optionally defined clean-pulse-java
	target.

2010-02-24 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add THANKYOU to
	EXTRA_DIST.
	* pulseaudio/AUTHORS: Removed; duplicates
	top-level file.

2010-02-24  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginMain.java: Add some javaplugin.*
	properties that some applets expect.
	* rt/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java: Implement