@@ -116,6 +116,7 @@ The following patches are only applied to OpenJDK6 in IcedTea6:
 * icedtea-nss-config.patch: Add the NSS PKCS11 security provider. (PR356)
 * icedtea-nss-6763530.patch: Fix PKCS11 provider when used with newer version of NSS (>=3.12.3) (PR356, S6763530).
 * libpng.patch: Use png_sig_cmp instead of png_check_sig so we can build against libpng 1.4.
+* icedtea-jaxws-getdtdtype.patch: Workaround for incorrect return type in gcj < 4.4 / GNU Classpath < 0.98
 
 The following patches are only applied to OpenJDK in IcedTea:
 
