@@ -11,13 +11,17 @@
              attrs.addAttribute(uri, localName, qName, type, value);
 --- drop/jaxws_src/src/com/sun/xml/internal/fastinfoset/stax/events/AttributeBase.java.old	2009-11-17 19:46:11.000000000 +0000
 +++ drop/jaxws_src/src/com/sun/xml/internal/fastinfoset/stax/events/AttributeBase.java	2009-11-17 19:46:35.000000000 +0000
-@@ -112,6 +112,9 @@
-         return _attributeType;
-     }
- 
+@@ -108,11 +108,10 @@
+    * the String "CDATA"
+    * @return the type as a String, default is "CDATA"
+    */
+-    public String getDTDType() {
+-        return _attributeType;
 +    public QName getDTDType() {
 +        return new QName(_attributeType);
-+    }
+     }
  
+-
    /**
     * A flag indicating whether this attribute was actually
+    * specified in the start-tag of its element, or was defaulted from the schema.
