@@ -10,6 +10,12 @@
 	
 2009-11-17  Andrew John Hughes  <ahughes@redhat.com>
 
+	* patches/icedtea-jaxws-getdtdtype.patch:
+	Replace getDTDType method, don't add another.
+	* HACKING: Document the patch.
+	
+2009-11-17  Andrew John Hughes  <ahughes@redhat.com>
+
 	* Makefile.am:
 	Make use of JAXWS dependent on absence of
 	javax.annotation.Resource and/or getDTDType()
